Ignore meta in a method provider's list of provided methods.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Revision history for Perl extension MooseX-AttributeHelpers
 
+0.22
+    - Fix to work with Moose 0.90. Ignore meta when auto-providing a method
+      provider's methods.
+	
 0.21 Sun July 19, 2009
     - Add length to String (Florian Ragwitz).
     - Specify build dependency on Test::Moose (Closes RT#47258) (Florian Ragwitz).
