--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@ Revision history for Perl extension MooseX-AttributeHelpers
 
 0.22
     - Fix to work with Moose 0.90. Ignore meta when auto-providing a method
-      provider's methods.
+      provider's methods. (Dave Rolsky)
 	
 0.21 Sun July 19, 2009
     - Add length to String (Florian Ragwitz).
