Don't rely on hash order in tests (RT#81564)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 Revision history for Perl extension MooseX-AttributeHelpers
 
+    - Don't rely on hash order in tests (RT#81564)
+
 0.23 Fri Jan 1, 2010
     - A small internals fix to prevent breakage with the next version of
       Moose. (Dave Rolsky)
