increment $VERSION after 0.25 release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension MooseX-AttributeHelpers
 
+{{$NEXT}}
+
 0.25      2016-02-16 05:27:31Z
     - stronger deprecation notice in pod
 
